fix formats for jekyll deploy

--- a/ltr/index.html
+++ b/ltr/index.html
@@ -345,7 +345,7 @@ query_id : 2, relevance_score:2, feature_vector 0:0.1, 1:0.4, 2:0.1  #doc1
 
 需要转换为Listwise格式，例如
 
-<query_id><relevance_score> <feature_vector>
+`<query_id><relevance_score> <feature_vector>`
 
 ```tex
 1    1    0.1,0.2,0.4
