CTR: add English README

--- a/ctr/index.html
+++ b/ctr/index.html
@@ -42,25 +42,9 @@
 <div id="markdown" style='display:none'>
 # Click-Through Rate Prediction
 
-以下是本例目录包含的文件以及对应说明:
-
-```
-├── README.md               # 本教程markdown 文档
-├── dataset.md              # 数据集处理教程
-├── images                  # 本教程图片目录
-│   ├── lr_vs_dnn.jpg
-│   └── wide_deep.png
-├── infer.py                # 预测脚本
-├── network_conf.py         # 模型网络配置
-├── reader.py               # data reader
-├── train.py                # 训练脚本
-└── utils.py                # helper functions
-└── avazu_data_processer.py # 示例数据预处理脚本
-```
-
 ## Introduction
 
-CTR(Click-Through Rate，点击率预估)\[[1](https://en.wikipedia.org/wiki/Click-through_rate)\]
+CTR(Click-Through Rate)\[[1](https://en.wikipedia.org/wiki/Click-through_rate)\]
 is a prediction of the probability that a user clicks on an advertisement. This model is widely used in the advertisement industry. Accurate click rate estimates are important for maximizing online advertising revenue.
 
 When there are multiple ad slots, CTR estimates are generally used as a baseline for ranking. For example, in a search engine's ad system, when the user enters a query, the system typically performs the following steps to show relevant ads.
