Refine the Use Pre-trained Models chapter in image_classification/README

--- a/image_classification/index.html
+++ b/image_classification/index.html
@@ -265,9 +265,19 @@ for file_name, result in zip(file_list, lab):
 首先从文件中加载训练好的模型（代码里以第10轮迭代的结果为例），然后读取`image_list_file`中的图像。`image_list_file`是一个文本文件，每一行为一个图像路径。代码使用`paddle.infer`判断`image_list_file`中每个图像的类别，并进行输出。
 
 ## 使用预训练模型
-为方便进行测试和fine-tuning，我们提供了一些对应于示例中模型配置的预训练模型，目前包括ResNet50、ResNet101和Vgg16这几种模型，并提供脚本`model_download.sh`进行模型下载，如下载ResNet50可执行"`sh model_download.sh ResNet50`"，完成后`Paddle_ResNet50.tar.gz`即是相应模型，可参照示例代码进行加载。
+为方便进行测试和fine-tuning，我们提供了一些对应于示例中模型配置的预训练模型，目前包括在ImageNet 1000类上训练的ResNet50、ResNet101和Vgg16，请使用脚本`model_download.sh`进行模型下载，如下载ResNet50可执行"`sh model_download.sh ResNet50`"，完成后同目录下的`Paddle_ResNet50.tar.gz`即是训练好的模型，可以在代码中使用如下两种方式进行加载模：
 
-需要注意，模型压缩包中所含各文件名对应了模型中的各参数名，这是模型参数加载的依据，所以需要保证网络配置中的参数名能够正确对应到相应的文件。这里提供的模型均使用了示例代码中的配置，如需修改网络配置并使用提供的模型请多加注意。
+```python
+parameters = paddle.parameters.Parameters.from_tar(gzip.open('Paddle_ResNet50.tar.gz', 'r'))
+```
+
+```python
+parameters = paddle.parameters.create(cost)
+parameters.init_from_tar(gzip.open('Paddle_ResNet50.tar.gz', 'r'))
+```
+
+### 注意事项
+模型压缩包中所含各文件的文件名对应了和模型配置中的参数名一一对应，是加载模型参数的依据。我们提供的预训练模型均使用了示例代码中的配置，如需修改网络配置，请多加注意，需要保证网络配置中的参数名和压缩包中的文件名能够正确对应。
 
 </div>
 <!-- You can change the lines below now. -->
