--- a/scene_text_recognition/index.html
+++ b/scene_text_recognition/index.html
@@ -44,13 +44,13 @@
 
 ## STR任务简介
 
-在现实生活中，许多图片中的文字为图片所处场景的理解提供了丰富的语义信息（例如：路牌、菜单、街道标语等）。同时，场景图片文字识别技术的发展也促进了一些新型应用的产生，例如：\[[1](#参考文献)\]通过使用深度学习模型来自动识别路牌中的文字，帮助街景应用获取更加准确的地址信息。
+许多场景图像中包含着丰富的文本信息，它们可以从很大程度上帮助人们去认知场景图像的内容及含义，因此场景图像中的文本识别对所在图像的信息获取具有极其重要的作用。同时，场景图像文字识别技术的发展也促进了一些新型应用的产生，例如：\[[1](#参考文献)\]通过使用深度学习模型来自动识别路牌中的文字，帮助街景应用获取更加准确的地址信息。
 
-本例将演示如何用 PaddlePaddle 完成 **场景文字识别 (STR, Scene Text Recognition)** 任务。如下图所示，给定一张场景图片，`STR` 需要从中识别出对应的文字"keep"。
+本例将演示如何用 PaddlePaddle 完成 **场景文字识别 (STR, Scene Text Recognition)** 。任务如下图所示，给定一张场景图片，`STR` 需要从中识别出对应的文字"keep"。
 
 <p align="center">
 <img src="./images/503.jpg"/><br/>
-图 1. 数据示例 "keep"
+图 1. 输入数据示例 "keep"
 </p>
 
 
@@ -61,9 +61,9 @@
 pip install -r requirements.txt
 ```
 
-### 指定训练配置参数
+### 修改配置参数
 
- `config.py` 脚本中包含了模型配置和训练相关的参数以及对应的详细解释，代码如下：
+ `config.py` 脚本中包含了模型配置和训练相关的参数以及对应的详细解释，代码片段如下：
 ```python
 class TrainerConfig(object):
 
@@ -107,7 +107,7 @@ Options:
 
 ```
 
-- `train_file_list` ：训练数据的列表文件，每行由图片的存储路径和对应的标记文本组成，具体格式为：
+- `train_file_list` ：训练数据的列表文件，每行由图片的存储路径和对应的标记文本组成，格式为：
 ```
 word_1.png, "PROPER"
 word_2.png, "FOOD"
